[workspace]
members = [
    "network",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A network interface creation utility for macOS and Linux"

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
libc = "0.2"
nix = { version = "0.29.0", features = ["net"] }
sudo = "0.6"
