[package]
name = "network"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tun_daemon"
path = "bin/tun_daemon.rs"

[[bin]]
name = "tun"
path = "bin/tun.rs"

[dependencies]
anyhow = "1.0"
axum = "0.7"
daemonize = "0.5"
default-net = "0.22"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tun = { version = "0.7.6", features = ["async"] }
