[package]
name = "nfs4"
version = "0.1.0"
edition = "2021"
description = "NFSv4 server implementation"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde-xdr = "0.6"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
sudo = "0.6"
nix = { version = "0.27", features = ["fs"] }
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.9"
tokio-test = "0.4"

[workspace]
members = ["."]
resolver = "2"
